# toaster3D

./: .clang-format  CMakeLists.txt  IRenderer.h  README.md  main.cpp  prepAndBuild.py  requirements.txt
OpenGL/: CMakeLists.txt  Camera.cpp  Camera.h  OpenGLRenderer.cpp  OpenGLRenderer.h  RectangleEntity.cpp  RectangleEntity.hpp  SphereEntity.cpp  SphereEntity.hpp  TriangleEntity.cpp  TriangleEntity.h  loadShaders.hpp
OpenGL/TextureLoading/: loadBmp.cpp  loadBmp.hpp
OpenGL/entity/: OpenGL2DEntity.hpp  OpenGL3DEntity.hpp  OpenGLEntity.hpp
OpenGL/glew/: CMakeLists.txt
OpenGL/glew/src/: glew.c
OpenGL/shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  TextFragmentShader.fragmentshader  TextVertexShader.vertexshader
helper/: findFile.hpp
